issue resolved with overlap photo-outer and navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,7 @@ body {
     position: fixed !important;
     top: 0;
     width: auto;
+    height: 70px;
 
     /* Code from https://stackoverflow.com/questions/3971880/how-to-make-shadow-on-border-bottom */
     -webkit-box-shadow: 0px 3px 3px #2b2b2b;
@@ -113,6 +114,7 @@ button:focus {
 /*---------- Images ----------*/
 /*---------- Idea and contains code from Love Running project ----------*/
 #photo-outer {
+    margin-top: 70px;
     height: 400px;
     width: 100%;
     overflow: hidden;
